--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 remote_theme: pages-themes/midnight@v0.2.0
 
-
-
+title: Assignment-1
+description: PPS subject C++ Topic
 show_downloads: true
 
 mermaid:
